# Decomp-Diffusion

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  TECHDEBT.md  eval.py  eval.sh  eval_coco.py  eval_movi.py  probe_movi.py  pyproject.toml  train_lsd.py
configs/celebahq/: eval.sh  train_config.yaml
configs/coco/: train_config.yaml
configs/movi-e/: train_config.yaml
docs/: movi-e-encoder-configs.md  storage.md
docs/experiments/: 2026-05-20-celebahq-full-500k-run.md  2026-05-20-celebahq-train-eval-validation.md  2026-05-21-celebahq-slot-attention-encoder.md  2026-05-23-movi-e-slot-attention.md  2026-05-26-movi-e-dinov3-registers.md  2026-05-27-coco-coda-kv-only.md  2026-05-27-movi-e-coda-kv-only-latest-eval.md  2026-05-27-movi-e-coda-kv-only.md  2026-05-28-coco-coda-kv-only-eval.md  2026-05-28-movi-e-adaptive-eps-slot-attn-pool.md  2026-05-28-movi-e-adaptive-eps-slot-attn.md  2026-05-29-coco-coda-kv-only-train-eval.md  (+1 more)
jobs/: celebahq_eval_validation.sh  celebahq_slot_attn_eval.sh  celebahq_slot_attn_smoketest.sh  celebahq_slot_attn_train_eval.sh  celebahq_train_eval_full.sh  celebahq_train_eval_validation.sh  coco_coda_kv_only_eval_latest.sh  coco_coda_kv_only_train.sh  coco_coda_kv_only_train_eval.sh  coco_download.sh  coco_smoketest.sh  movi_e_adaptive_eps_slot_attn_pool_warmstart_train_eval.sh  movi_e_adaptive_eps_slot_attn_warmstart_eval_latest.sh  movi_e_adaptive_eps_slot_attn_warmstart_train_eval.sh  movi_e_attn_sdpa_benchmark.sh  movi_e_attn_sdpa_dynamo_benchmark.sh  movi_e_attn_sdpa_dynamo_smoketest.sh  movi_e_attn_sdpa_smoketest.sh  movi_e_coda_kv_only_512_train_eval.sh  movi_e_coda_kv_only_eval_latest.sh  movi_e_coda_kv_only_smoketest.sh  movi_e_coda_kv_only_train_eval.sh  movi_e_dino_slot_train_eval.sh  movi_e_dinov3_registers_train_eval.sh  movi_e_dinov3_slot_train_eval.sh  movi_e_preprocess.sh  movi_e_shard_wds.sh  movi_e_slot_attn_train_eval.sh
scripts/: environment.sh
src/: parser.py
tests/: test_movi_wds_dataset.py  test_segmentation.py
(+29 files in other folders)
